# fastapi-microservice-template

./: .env  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
docker/: Dockerfile  docker-alembic.ini  docker-compose.yaml
src/: app.py  settings.py
src/api/: __init__.py
src/api/routers/: users.py
src/db/: engine.py  session.py
src/db/alembic/: env.py
src/db/alembic/versions/: 1db4ac4c2b4b_init.py  479a8fdce8be_fix_demo_model_col_decimal.py  620c8f330349_init_demo.py  6cb993f5758e_fix_decimal_precision.py  7cbf4de6858d_trigger_on_update.py  ddcdc50d66d1_init_demo.py  f40332f08441_demo.py
src/db/models/: __init__.py  base.py  demo.py  demo_model.py  users.py
src/repositories/: __init__.py  users.py
src/schemas/: users.py
src/templates/: index.html
tests/: conftest.py
tests/db/: test_db_models.py  test_demo_model.py  test_demo_raw_result.py  test_user_repository.py
