[tool.poetry]
name = "fastapi-microservice-template"
version = "0.1.0"
description = "The Ultimate Super-Convenient Template for Microservices Based on FastAPI"
authors = ["binarycat <artur.rakhmatulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
alembic = "^1.14.0"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cover = "^3.0.0"
black = "^24.10.0"
mypy = "^1.14.1"
isort = "^5.13.2"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.5"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
gevent = "^24.11.1"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v"
pythonpath = "src"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = ["tests", "src/db/alembic"]

[tool.black]
exclude = "src/db/alembic"